# mp3converter

./: build.gradle  settings.gradle  x.b64
app/: CMakeCache.txt  CMakeLists.txt  Makefile  build.gradle  cmake_install.cmake  google-services.json
app/src/androidTest/assets/: Senorita.mid
app/src/androidTest/java/com/philblandford/mp3converter/: ExampleInstrumentedTest.kt  SampleTest.kt
app/src/androidTest/java/com/philblandford/mp3converter/repository/: MediaFileGetterTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/fluidsynth/: files  fluid_alsa.c  fluid_aufile.c  fluid_chan.c  fluid_chan.h  fluid_synth.c  fluid_synth.h
app/src/main/cpp/jni/: ffmpeg-native.c  fluid-native.c
app/src/main/cpp/lame/libmp3lame/: bitstream.c
app/src/main/java/com/philblandford/mp3converter/: BaseApplication.kt  FailureFragment.kt  Interfaces.kt  Settings.kt  SuccessFragment.kt
app/src/main/java/com/philblandford/mp3converter/repository/: FileConverter.kt  (+1 more)
app/src/main/res/drawable/: border.xml  border_straight.xml
app/src/main/res/layout/: activity_main.xml  file_picker.xml  file_picker_item.xml  fragment_convert_dialog.xml  fragment_convert_options.xml  fragment_failure.xml  fragment_pick_card.xml  fragment_play.xml  fragment_progress.xml  fragment_report_problem.xml  fragment_success.xml
app/src/main/res/navigation/: convert_graph.xml  nav_graph.xml
app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  styles.xml
app/src/test/assets/: Albinoni.mid  Barsanti.mid  EDGE1.mid  twinkle.mid  untitled.mid
mp3/: R.txt  (+1 more)
(+76 files in other folders)
